[metadata]
name = networking_bigswitch_l3_pe
version = 1.1.0
description = OpenStack Neutron ML2 drivers for Big Cloud Fabric Physical Edition
summary = OpenStack Neutron ML2 drivers for Big Cloud Fabric Physical Edition
author = kengo.sakai
author_email = kengo.sakai@dena.com
url = https://github.com/DeNADev/networking-bigswitch-l3-pe
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[entry_points]
neutron.ml2.mechanism_drivers =
	networking_bigswitch_l3_pe = networking_bigswitch_l3_pe.drivers.mech:BCFPhysicalEditionMechanismDriver
